2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved message classes for better message handling.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved log rendering performance.
	Changed max lines of log views to 300.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Improved SACrashReporter to ignore SignalException.
	Removed a dataSource reference from a combo box on the preferences dialog.

2007-12-17  Satoshi Nakagawa <artension@gmail.com>

	Added @nick style conversation tracking for the nick completion.
	Removed unnecessary files.

2007-12-16  Satoshi Nakagawa <artension@gmail.com>

	Changed to apply the nickname format setting to Growl notifications.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Added the nickname format as an option.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Moved "Reload Theme" menu item under View.

2007-12-15  Satoshi Nakagawa <artension@gmail.com>

	Tweaked Deep Ocean theme.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, weights for completion didn't work correctly.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Switched to Pasternak.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Tweaked Deep Ocean theme.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Added gradient color settings for member list selected items in a theme.
	Fixed a nil access bug in starting up.

2007-12-14  Satoshi Nakagawa <artension@gmail.com>

	Added a Pasternak client.
	Added error handling to the Pastie client.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Added the "Deep Ocean" theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Improved the build script to remove unnecessary files.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in starting up.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the default theme and the sample theme.

2007-12-13  Satoshi Nakagawa <artension@gmail.com>
