@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.13.3";
+AppVersion = "LimeChat for OSX 0.13.4";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
