@@ -1,3 +1,8 @@
+2007-12-18  Satoshi Nakagawa <artension@gmail.com>
+
+	Added nickname format settings in a theme.
+	Added "Override nickname format" option on the preferences dialog.
+
 2007-12-17  Satoshi Nakagawa <artension@gmail.com>
 
 	Improved message classes for better message handling.
